--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@conarti/eslint-plugin-feature-sliced": "^1.0.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@reduxjs/toolkit": "^2.2.6",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
     "@storybook/addon-links": "^7.6.17",
@@ -62,6 +63,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.8.1",
+    "react-redux": "^9.1.2",
     "react-refresh": "^0.14.0",
     "react-test-renderer": "^18.2.0",
     "react-tooltip": "^5.26.4",
