--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-redux": "^9.1.2",
     "react-refresh": "^0.14.0",
     "react-test-renderer": "^18.2.0",
+    "react-toast": "^1.0.3",
     "react-tooltip": "^5.26.4",
     "regenerator-runtime": "^0.14.1",
     "storybook": "^7.6.17",
