--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@tanstack/react-query": "^5.27.5",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "axios": "^1.7.2",
     "bem-css-modules": "^1.4.3",
     "loki": "^0.34.0",
     "react": "^18.2.0",
